# versioning-rs

./: Cargo.toml  README.md
examples/: enums.rs  generics.rs  impls.rs  ordered.rs  partial.rs  simple.rs  structs.rs
src/: lib.rs  spec.rs  version.rs  versioned.rs  versioning.rs
