[package]
name = "versioning"
version = "0.1.0"
edition = "2021"
description = "A (suite of) Rust procedural macro(s) that can be used to compile a schema- or specification-like struct to multiple versions of itself."
authors = [ "Lut99" ]
repository = "https://github.com/Lut99/versioning-rs"


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = "2.0"
